add: 프로젝트 자산 스키마와 Secret 암호화 적용