@@ -10,10 +10,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -27,148 +24,78 @@ public class EnrollmentService {
     private final EnrollmentKafkaProducer kafkaProducer;
     private final EnrollmentWriteService enrollmentWriteService;
 
-    /**
-     * 수강신청 전체 흐름
-     * 1. 강의 존재 확인
-     * 2. 중복 수강 확인
-     * 3. Enrollment 생성 및 즉시 커밋 (PENDING)
-     * 4. 결제 요청
-     */
-    public EnrollmentDto.EnrollmentResponse enroll(Long userId, Long courseId) {
-        if (!courseServiceClient.existsCourse(courseId)) {
-            throw new IllegalArgumentException("존재하지 않는 강의입니다: " + courseId);
+    public EnrollmentDto.EnrollmentResponse enroll(
+            Long userId,
+            Long projectId,
+            String reason
+    ) {
+        if (!courseServiceClient.existsProject(projectId)) {
+            throw new IllegalArgumentException("존재하지 않는 프로젝트입니다: " + projectId);
         }
 
-        if (enrollmentRepository.existsByUserIdAndCourseId(userId, courseId)) {
-            throw new IllegalArgumentException("이미 수강신청한 강의입니다");
-        }
+        Enrollment enrollment = enrollmentRepository
+                .findByUserIdAndProjectId(userId, projectId)
+                .map(existing -> {
+                    if (existing.getStatus() != Enrollment.Status.CANCELLED) {
+                        throw new IllegalStateException("이미 접근 신청했거나 활성화된 프로젝트입니다.");
+                    }
+                    return enrollmentWriteService.reapply(existing, reason);
+                })
+                .orElseGet(() -> enrollmentWriteService.createPendingEnrollment(
+                        userId,
+                        projectId,
+                        reason
+                ));
 
-        Enrollment enrollment = enrollmentWriteService.createPendingEnrollment(userId, courseId);
-
-        paymentServiceClient.requestPayment(userId, courseId, BigDecimal.valueOf(99000));
-
-        log.info("[EnrollmentService] 수강신청 완료 (결제 대기) - enrollmentId: {}", enrollment.getId());
+        paymentServiceClient.requestApproval(enrollment.getId(), userId, projectId);
         return EnrollmentDto.EnrollmentResponse.from(enrollment);
     }
 
-    /**
-     * 수강 활성화
-     */
     @Transactional
-    public void activateEnrollment(Long userId, Long courseId) {
-        Enrollment enrollment = enrollmentRepository.findByUserIdAndCourseId(userId, courseId)
+    public void activateEnrollment(Long enrollmentId, Long userId, Long projectId) {
+        Enrollment enrollment = enrollmentRepository.findById(enrollmentId)
                 .orElseThrow(() -> new IllegalArgumentException(
-                        "수강 정보를 찾을 수 없습니다 - userId: " + userId + ", courseId: " + courseId));
+                        "접근 신청을 찾을 수 없습니다: " + enrollmentId
+                ));
+
+        if (!enrollment.getUserId().equals(userId)
+                || !enrollment.getProjectId().equals(projectId)) {
+            throw new IllegalArgumentException("승인 이벤트와 접근 신청 정보가 일치하지 않습니다.");
+        }
+        if (enrollment.getStatus() == Enrollment.Status.ACTIVE) {
+            return;
+        }
+        if (enrollment.getStatus() != Enrollment.Status.PENDING) {
+            throw new IllegalStateException("PENDING 접근 신청만 활성화할 수 있습니다.");
+        }
 
         enrollment.activate();
-
-        courseServiceClient.increaseEnrollmentCount(courseId);
-
         kafkaProducer.publishEnrollmentCompleted(
                 KafkaEvent.EnrollmentCompletedEvent.builder()
                         .enrollmentId(enrollment.getId())
                         .userId(userId)
-                        .courseId(courseId)
+                        .projectId(projectId)
+                        .status("ACTIVE")
                         .build()
         );
-
-        log.info("[EnrollmentService] 수강 활성화 완료 - enrollmentId: {}", enrollment.getId());
     }
 
-    /**
-     * 사용자 수강 목록 조회
-     * - course-service에서 강의 상세 정보를 붙여서 반환
-     */
     public List<EnrollmentDto.EnrollmentResponse> getEnrollmentsByUser(Long userId) {
-        List<Enrollment> enrollments = enrollmentRepository.findByUserId(userId);
-
-        return enrollments.stream()
-                .map(enrollment -> {
-                    Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
-
-                    EnrollmentDto.CourseSummary courseSummary = EnrollmentDto.CourseSummary.builder()
-                            .id(toLong(courseInfo.get("id")))
-                            .title((String) courseInfo.get("title"))
-                            .description((String) courseInfo.get("description"))
-                            .category(normalizeCategory((String) courseInfo.get("category")))
-                            .price(toInteger(courseInfo.get("price")))
-                            .thumbnail((String) courseInfo.get("thumbnail"))
-                            .instructorName(
-                                    firstNonNull(
-                                            (String) courseInfo.get("instructorName"),
-                                            (String) courseInfo.get("teacherName"),
-                                            (String) courseInfo.get("instructor_name")
-                                    )
-                            )
-                            .enrollmentCount(toInteger(
-                                    firstNonNullObject(
-                                            courseInfo.get("enrollmentCount"),
-                                            courseInfo.get("enrollment_count")
-                                    )
-                            ))
-                            .build();
-
-                    return EnrollmentDto.EnrollmentResponse.from(enrollment, courseSummary);
-                })
-                .collect(Collectors.toList());
+        return enrollmentRepository.findByUserId(userId).stream()
+                .map(EnrollmentDto.EnrollmentResponse::from)
+                .toList();
     }
 
-    /**
-     * 수강 이력 조회 - 추천 서비스용
-     */
     public EnrollmentDto.EnrollmentHistoryResponse getEnrollmentHistory(Long userId) {
-        List<Long> activeCourseIds = enrollmentRepository
+        List<Long> activeProjectIds = enrollmentRepository
                 .findByUserIdAndStatus(userId, Enrollment.Status.ACTIVE)
                 .stream()
-                .map(Enrollment::getCourseId)
-                .collect(Collectors.toList());
+                .map(Enrollment::getProjectId)
+                .toList();
 
         return EnrollmentDto.EnrollmentHistoryResponse.builder()
                 .userId(userId)
-                .activeCourseIds(activeCourseIds)
+                .activeProjectIds(activeProjectIds)
                 .build();
-    }
-
-    private String normalizeCategory(String category) {
-        if (category == null) return null;
-
-        return switch (category) {
-            case "BACKEND" -> "백엔드";
-            case "FRONTEND" -> "프론트엔드";
-            case "DEVOPS" -> "DevOps";
-            case "DATA" -> "데이터";
-            case "AI" -> "AI";
-            default -> category;
-        };
-    }
-
-    private Long toLong(Object value) {
-        if (value == null) return null;
-        if (value instanceof Number number) return number.longValue();
-        return Long.parseLong(value.toString());
-    }
-
-    private Integer toInteger(Object value) {
-        if (value == null) return null;
-        if (value instanceof Number number) return number.intValue();
-        return Integer.parseInt(value.toString());
-    }
-
-    private String firstNonNull(String... values) {
-        for (String value : values) {
-            if (value != null && !value.isBlank()) {
-                return value;
-            }
-        }
-        return null;
-    }
-
-    private Object firstNonNullObject(Object... values) {
-        for (Object value : values) {
-            if (value != null) {
-                return value;
-            }
-        }
-        return null;
     }
 }
