@@ -2,7 +2,6 @@ package com.lecture.payment.service;
 
 import com.lecture.payment.dto.PaymentDto;
 import com.lecture.payment.entity.Payment;
-import com.lecture.payment.kafka.PaymentKafkaProducer;
 import com.lecture.payment.repository.PaymentRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -10,8 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,88 +17,45 @@ import java.util.stream.Collectors;
 public class PaymentService {
 
     private final PaymentRepository paymentRepository;
-    private final PaymentKafkaProducer kafkaProducer;
 
     /**
-     * 내부 결제 요청 (Enrollment Service → Payment Service REST 호출)
-     * 실습 환경에서는 PG 연동 없이 항상 성공으로 처리
-     *
-     * 처리 흐름:
-     * 1. Payment 생성 (PENDING)
-     * 2. PG 결제 처리 (실습: UUID 트랜잭션 ID 발급으로 대체)
-     * 3. Payment 상태 → COMPLETED
-     * 4. payment.completed 이벤트 발행 → Kafka
+     * 프로젝트 접근 신청에 대응하는 승인 대기 티켓만 생성한다.
+     * 승인/거절 및 Kafka 발행은 별도 기능 이슈에서 구현한다.
      */
     @Transactional
     public PaymentDto.InternalPaymentResult processInternalPayment(
-            PaymentDto.InternalPaymentRequest request) {
-
-        log.info("[PaymentService] 결제 요청 - userId: {}, courseId: {}, amount: {}",
-                request.getUserId(), request.getCourseId(), request.getAmount());
-
+            PaymentDto.InternalPaymentRequest request
+    ) {
         Payment payment = paymentRepository.save(
                 Payment.builder()
+                        .enrollmentId(request.getEnrollmentId())
                         .userId(request.getUserId())
-                        .courseId(request.getCourseId())
-                        .amount(request.getAmount())
+                        .projectId(request.getProjectId())
                         .build()
         );
 
-        try {
-            String transactionId = UUID.randomUUID().toString();
-
-            payment.complete(transactionId);
-            log.info("[PaymentService] 결제 완료 처리 - paymentId: {}, transactionId: {}",
-                    payment.getId(), transactionId);
-
-            kafkaProducer.publishPaymentCompleted(
-                    PaymentKafkaProducer.PaymentCompletedEvent.builder()
-                            .paymentId(payment.getId())
-                            .userId(request.getUserId())
-                            .courseId(request.getCourseId())
-                            .status("COMPLETED")
-                            .build()
-            );
-
-            log.info("[PaymentService] 결제 최종 성공 - paymentId: {}", payment.getId());
-
-            return PaymentDto.InternalPaymentResult.builder()
-                    .paymentId(payment.getId())
-                    .status("COMPLETED")
-                    .build();
-
-        } catch (Exception e) {
-            payment.fail();
-
-            log.error("[PaymentService] 결제 실패 - paymentId: {}, userId: {}, courseId: {}, error: {}",
-                    payment.getId(),
-                    request.getUserId(),
-                    request.getCourseId(),
-                    e.getMessage(),
-                    e);
-
-            return PaymentDto.InternalPaymentResult.builder()
-                    .paymentId(payment.getId())
-                    .status("FAILED")
-                    .build();
-        }
+        log.info(
+                "[PaymentService] 프로젝트 승인 티켓 생성 - paymentId: {}, enrollmentId: {}",
+                payment.getId(),
+                payment.getEnrollmentId()
+        );
+        return PaymentDto.InternalPaymentResult.builder()
+                .paymentId(payment.getId())
+                .status(payment.getStatus().name())
+                .build();
     }
 
-    /**
-     * 결제 단건 조회
-     */
     public PaymentDto.PaymentResponse getPayment(Long id) {
         Payment payment = paymentRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("결제 정보를 찾을 수 없습니다: " + id));
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "승인 티켓을 찾을 수 없습니다: " + id
+                ));
         return PaymentDto.PaymentResponse.from(payment);
     }
 
-    /**
-     * 사용자 결제 내역 조회
-     */
     public List<PaymentDto.PaymentResponse> getPaymentsByUser(Long userId) {
         return paymentRepository.findByUserId(userId).stream()
                 .map(PaymentDto.PaymentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
